# stats

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  cgo_prebuilt.go  cgo_source.go  cgo_source.go.in  correlation.go  correlation_test.go  covariance.go  covariance_test.go  ema.go  ema_test.go  go.mod  kahan_sum.go  kahan_sum_test.go  mean_var.go  mean_var_test.go  moments.go  moments_test.go  quantile.go  quantile_test.go  rank.go  rank_test.go  rolling.go  rolling_test.go  stats.go  weighted.go  weighted_test.go  welford.go  welford_test.go  winsorize.go  winsorize_test.go  zscore.go  zscore_test.go
.githooks/: pre-commit
.github/: sanitizers.cmake
.github/actions/setup-deps/: action.yml
.github/workflows/: main.yml
benchmarks/: CMakeLists.txt  bench_correlation.c  bench_covariance.c  bench_ema.c  bench_framework.c  bench_framework.h  bench_kahan_sum.c  bench_main.c  bench_mean_var.c  bench_moments.c  bench_quantile.c  bench_rank.c  bench_rolling.c  bench_stats.c  bench_weighted.c  bench_welford.c  bench_winsorize.c  bench_zscore.c
cmake/: CompilerFlags.cmake  DetectSIMD.cmake  finkit-statsConfig.cmake.in  sanitizers.cmake
cmake/toolchain/: aarch64-apple-darwin.cmake  clang-wrapper  x86_64-pc-linux-gnu.cmake  x86_64-w64-mingw32.cmake
include/: correlation.h  covariance.h  ema.h  kahan_sum.h  mean_var.h  moments.h  quantile.h  rank.h  rolling.h  stats.h  weighted.h  welford.h  winsorize.h  zscore.h
scripts/: build.sh  coverage.sh  run_benchmarks.sh  test_coverage.sh
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_correlation.c  test_covariance.c  test_ema.c  test_framework.c  test_framework.h  test_kahan_sum.c  test_main.c  test_mean_var.c  test_moments.c  test_quantile.c  test_rank.c  test_rolling.c  test_stats.c  test_weighted.c  test_welford.c  test_winsorize.c  test_zscore.c
